[package]
name = "u-siem-pulsesecure"
version = "0.0.2"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM PulseSecure VPN parser"
repository = "https://github.com/u-siem/usiem-pulsesecure"
keywords = ["SIEM", "security", "logs","pulsesecure","vpn"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_pulsesecure"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
u-siem = {version = "0.0"}
chrono = "0.4"